--- a/package.json
+++ b/package.json
@@ -48,8 +48,10 @@
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.8.0",
     "react-native-share": "^7.2.1",
+    "react-native-sound": "^0.11.2",
     "react-native-svg": "12.1.1",
     "react-native-tab-view": "^3.1.1",
+    "react-native-toast-message": "^2.1.1",
     "react-native-vector-icons": "^9.0.0",
     "react-native-webview": "^11.14.1",
     "react-redux": "^7.2.5",
