--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -159,12 +159,10 @@ android {
             keyPassword 'android'
         }
          release {
-            if (project.hasProperty('MYAPP_UPLOAD_STORE_FILE')) {
-                storeFile file(MYAPP_UPLOAD_STORE_FILE)
-                storePassword MYAPP_UPLOAD_STORE_PASSWORD
-                keyAlias MYAPP_UPLOAD_KEY_ALIAS
-                keyPassword MYAPP_UPLOAD_KEY_PASSWORD
-            }
+            storeFile file('my-upload-key.keystore')
+            storePassword '123456789'
+            keyAlias 'my-key-alias'
+            keyPassword '123456789'
         }
     }
     buildTypes {
@@ -181,6 +179,7 @@ android {
             // see https://reactnative.dev/docs/signed-apk-android.
              
             signingConfig signingConfigs.debug
+            signingConfig signingConfigs.release
             minifyEnabled enableProguardInReleaseBuilds
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
         }
