--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "babel-jest": "^27.3.1",
     "eslint": "7.14.0",
     "jest": "^27.3.1",
+    "jetifier": "^2.0.0",
     "metro-react-native-babel-preset": "0.66.2",
     "react-test-renderer": "17.0.2",
     "remote-redux-devtools": "^0.5.16"
