--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -139,7 +139,7 @@ android {
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 11
-        versionName "10.3"
+        versionName "11.0"
         vectorDrawables.useSupportLibrary = true
           multiDexEnabled true
     }
@@ -209,6 +209,7 @@ dependencies {
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.0.0"
     implementation platform('com.google.firebase:firebase-bom:29.0.1')
     implementation 'com.google.firebase:firebase-analytics'
+    implementation project(':react-native-restart')
 
     // Import the Firebase BoM
     implementation platform('com.google.firebase:firebase-bom:29.1.0') // By Harsh
